# train_paddleocr

./: .gitignore  CLAUDE.md  README.MD  check_env.py  main.py  model_predict.py  predict.py  pyproject.toml  smiles.txt  test_doclayout.py  train.py
configs/: PP-DocLayoutV3.yaml
docs/superpowers/plans/: 2026-04-27-table-layout.md  2026-04-29-data-generation-cli-refactor.md  2026-05-14-nested-table-layout.md  2026-05-14-rdkit-rendering-diversity.md  2026-05-15-extract-shared-utils.md
docs/superpowers/specs/: 2026-04-29-data-generation-cli-design.md  2026-05-13-text-mix-layout-design.md  2026-05-14-nested-table-layout-design.md  2026-05-14-rdkit-structure-rendering-diversity-design.md  2026-05-15-extract-shared-utils-design.md  2026-05-15-table-layout-border-dropout-design.md  2026-05-15-text-mix-layout-category-sort-design.md
pipelines/: pipeline_config_vllm.yaml
prepare_traindata/: categories.py  cli.py  generate_dense_layout.py  generate_synthetic_layout.py  generate_table_layout.py  generate_text_mix_layout.py  image.py  merge_datasets.py  rdkit_chem.py  remap_and_split.py  text_vocab.py  utils.py  watermark_utils.py
